--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,100 @@
-<h2>Reactive: Básicos</h2>
+<h2>Dinamicos: Básicos</h2>
+<hr>
+<div class="row">
+    <div class="col">
+
+        <form (ngSubmit)="save()" autocomplete="off" [formGroup]='miFormulario'>
+<!-- Campo de producto -->
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-sm-9">
+                    <input type="text"
+                           class="form-control"
+                           placeholder="Nombre del Producto"
+                           formControlName='nombre'
+                           >
+                    <span class="form-text text-danger"
+                          *ngIf="invalid('nombre')">
+                                 Debe de tener de tres letras</span>
+                    <!-- <span class="form-text text-danger"
+                          *ngIf="miFormulario.controls.producto?.invalid && 
+                                 miFormulario.controls.producto?.touched"
+                                 >
+                                 Debe de tener de tres letras</span> -->
+                </div>
+            </div>
+<!-- Precio de producto -->
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                        class="form-control"
+                        placeholder="Precio del Producto" 
+                        formControlName='precio'
+                        min="0"
+                        name='precio'>
+                    <span class="form-text text-danger"
+                          *ngIf="invalid('precio')">
+                            El precio debe ser mayor a 0</span>
+                </div>
+            </div>
+<!-- stock de producto -->
+            <div class="mb-3 row">
+                <label for="" class="col-sm-3 col-form-label">Stock</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                        class="form-control"
+                        placeholder="stock" 
+                        formControlName='stock'
+                        name='stock'>
+                </div>
+            </div>
+<!-- Button -->
+
+            <div class="row">
+                <div class="col">
+                    <button type="submit" 
+                            class="btn btn-primary float-end"
+                           >
+                            Guardar
+                    </button>
+                </div>
+            </div>
+
+        </form>
+
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <span> Valid </span>
+        <pre>
+            {{ miFormulario.valid | json }}
+        </pre>
+
+        <!-- Los valores por defecto del formulario no se han cambiado -->
+        <span> Pristine </span>
+        <pre>
+            {{ miFormulario.pristine | json }}
+        </pre>
+
+        <!-- El formulario no se ha tocado -->
+        <span> Touche </span>
+        <pre>
+            {{ miFormulario.touched | json }} 
+        </pre> 
+
+
+        <span> Value </span>
+        <pre>
+            {{ miFormulario.value | json }}
+        </pre>
+
+
+    </div>
+</div>
+
+
+
