--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,89 @@
-<p>dinamicos works!</p>
+<h2>Reactive: <small>Dinamicos</small></h2>
+
+<hr>
+
+<form autocomplete="off"
+      [formGroup]='miFormulario'
+      (ngSubmit)='guardar()' >
+      <!-- Nombre -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input type="text"
+                   class="form-control"
+                   placeholder="Nombre de la Persona"
+                   formControlName=nombre
+                   >
+
+                   <span class="form-text text-danger"
+                         *ngIf="invalid( 'nombre' )">
+                       Este campo es obligatorio
+                   </span>
+
+        </div>
+    </div>
+    <!-- Agregar Favorito -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+           <div class="input-group">
+               <input class="form-control"
+                      [formControl]="nuevoFavorito"
+                      placeholder="Agregar"
+                      (keyup.enter)="agregarFavorito()"
+                      >
+
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="agregarFavorito()"
+                        >
+                    Agregar
+                </button>
+           </div>
+               
+
+        </div>
+    </div>
+    <!-- Lista de Juegos Favoritos -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9" formArrayName="favoritos">
+            <div class="input-group mb-1"
+                 *ngFor="let item of favoritosArr.controls; let i = index">
+                <input [formControlName]=i 
+                       class="form-control">
+    
+                <button class="btn btn-outline-danger"
+                        type="button"
+                        (click)="borrar(i)"
+                        >
+                        Borrar
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="submit"
+                    class="btn btn-primary float-end"
+                    >
+                    Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<div class="row">
+    <span>valid</span>
+    <pre>
+        {{ miFormulario.valid | json }}
+    </pre>
+    <span>Value</span>
+    <pre>
+        {{ miFormulario.value | json }}
+    </pre>
+    <span>Value</span>
+    <pre>
+        {{ nuevoFavorito.value | json }}
+    </pre>
+</div>
