--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,90 @@
-<p>switches works!</p>
+<h2>Reactive: <small>Switches</small></h2>
+<hr>
+
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
+
+    <!-- Radios -->
+    <div class="row mb-3">
+        <label for="" class="col-sm-3 col-form-label"> Género </label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       value="M"
+                       formControlName="genero"
+                       id="radioMasculino">
+
+                <label class="form-check-label" for="radioMasculino">
+                Masculino
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       formControlName="genero"
+                       value="F"
+                       id="radioFemenino">
+
+                <label class="form-check-label" for="radioFemenino">
+                Femenino
+                </label>
+            </div>
+        </div>
+    </div>
+    <!-- Checked -->
+    <div class="row mb-3">
+        <label for="" class="col-sm-3 col-form-label"> Notificaciones </label>
+        <div class="col-sm-9">
+            <div class="form-check form-switch mg-2">
+                <input class="form-check-input" 
+                       type="checkbox"
+                       formControlName="notificaciones"
+                       id="flexSwitchCheckChecked">
+
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir Notificaciones</label>
+              </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="" class="col-sm-3 col-form-label"> Terminos y Condiciones </label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="checkbox" 
+                       formControlName='terminos'
+                       id="flexCheckDefault"
+                       >
+                <label class="form-check-label" for="flexCheckDefault">
+                  Térms & Cond
+                </label>
+              </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end"
+                    type="submit">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+</form>
+
+
+<h4>Valor del Formulario</h4>
+<pre>
+    {{ miFormulario.value | json }}
+</pre>
+
+<h4>Valid</h4>
+<pre>
+    {{ miFormulario.valid | json }}
+</pre>
+
+<h4>Condiciones</h4>
+<pre>
+    
+</pre>
